Final commit of all the files to the repository

--- a/search/advanced.html
+++ b/search/advanced.html
@@ -23,7 +23,7 @@
                 <div class="form-wrapper">
                     <h1>Find pages with...</h1>
                     <!-- Form container-->
-                    <form action="https://google.com/advanced_search">
+                    <form action="https://google.com/search" name="f">
 
                             <!-- input 1 -->
                             <label for="input1">all these words:</label>
