Final commit of all the files to the repository

--- a/search/index.html
+++ b/search/index.html
@@ -9,7 +9,7 @@
         <main>
             <!-- Navigation bar -->
             <div class="nav-bar">
-                <!-- Logo-->
+                <!--Web Logo-->
                 <a href=""><img src="ressource/Quarere.svg" alt=""></a>
                 <!-- Buttons -->
                 <div class="nav">
